# nixl

./: meson.build
benchmark/nixlbench/: meson.build
benchmark/nixlbench/src/: main.cpp
benchmark/nixlbench/src/utils/: utils.cpp  utils.h
benchmark/nixlbench/src/worker/nixl/: nixl_worker.cpp
src/core/: nixl_agent.cpp  nixl_plugin_manager.cpp
src/infra/: mem_section.h  nixl_descriptors.cpp  nixl_memory_section.cpp
src/plugins/: meson.build
src/plugins/dummy/: dummy_backend.h  dummy_plugin.cpp  meson.build
test/: meson.build
test/gtest/mocks/: meson.build
test/nixl/: bench_sec_desc_list.cpp  meson.build
